# mudmap

./: .gitignore  CLAUDE.md  README.md  dev.sh  gen_panel.py  process_panel.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: tevethara-panel-philosophy.md
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DescriptionEditor.tsx  ExitManager.tsx  ExitOptionsPanel.tsx  FloorExitWizard.tsx  FloorSelector.tsx  LeftSidebar.tsx  MapCanvas.tsx  MapListDialog.tsx  MultiSelectPanel.tsx  NewMapDialog.tsx  PortalDirectionPicker.tsx  RoomDataPanel.tsx  TevetharaPanel.tsx  Toolbar.tsx  WorldMapCanvas.tsx  WorldMapCellPanel.tsx
frontend/src/data/: roomTemplates.ts
frontend/src/store/: mapStore.ts
frontend/src/types/: map.ts
maps/: 7132730b.json  ad3308f6.json  df4e589d.json
src/mudmap/: __init__.py  main.py  models.py
src/mudmap/api/: maps.py
