[project]
name = "mudmap"
version = "0.1.0"
description = "MUD area map builder for Evennia-based MUDs (Tevethara)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mudmap"]

[dependency-groups]
dev = []
